make it a component

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,6 @@
 {
-  "name": "Robots Monitor",
+  "name": "robots-monitor",
   "description": "frontend of bebuch/robots_simulation",
-  "main": "index.html",
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0"
   },
@@ -10,6 +9,6 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^2.1.0",
     "state-display": "bebuch/state-display",
-    "paper-toggle-button": "bebuch/paper-toggle-button"
+    "paper-toggle-button": "bebuch/paper-toggle-button#master"
   }
 }
