--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Robots Monitor",
-  "short_name": "Robots Monitor",
+  "name": "robots-monitor",
+  "short_name": "robots-monitor",
   "description": "frontend of bebuch/robots_simulation",
   "start_url": "/",
   "display": "standalone"
